# CPP-SortingAlgorithmsBench-Lab

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  TODO.md
data/: random_data_generator.py
data/not_sorted/: 150k.txt  15k.txt  20.txt  40k.txt  40k_unique.txt  80k.txt
include/: BinaryInsertionSort.hpp  BinarySearchTree.hpp  BubleSort.hpp  CombSort.hpp  Comparator.hpp  InsertionSort.hpp  KnuthShellSort.hpp  MergeSort.hpp  NaturalMergeSort.hpp  QuickSort.hpp  RedBlackTree.hpp  SelectionSort.hpp  ShakerSort.hpp  ShellSort.hpp
sources/: main.cpp
